# G4CoreLib-extended

./: CMakeLists.txt  TODO.md
Application/: CMakeLists.txt
Application/src/: main.cpp
G4CoreLib/: CMakeLists.txt
G4CoreLib/src/Analysis/: BaseAnalysis.cppm  BaseAnalysis.cppmrer
G4CoreLib/src/Models/: AlGaNModel.cppm
G4CoreLib/src/Models/Experiment/: BaseExperimentConfig.cppm
G4CoreLib/src/core/: GeantCoreManager.cppm
G4CoreLib/src/core/Actions/: BaseRunAction.cppm  BaseSteppingAction.cppm
G4CoreLib/src/core/Commands/: CommandManager.cppm
G4CoreLib/src/core/Concepts/: DetectorConstructionConcept.cppm  SourceGeneratorConcept.cppm
G4CoreLib/src/core/Detectors/: DetectorConstruction.cppm  DetectorManager.cppm  DetectorWrapper.cppm  StartDetector.cppm
G4CoreLib/src/core/Events/: EventManager.cppm
G4CoreLib/src/core/Interfaces/: IGeantCoreManager.cppm
G4CoreLib/src/core/Interfaces/Actions/: IRunAction.cppm  ISteppingAction.cppm
G4CoreLib/src/core/Interfaces/Detectors/: IDetectorConstruction.cppm
G4CoreLib/src/core/Interfaces/Materials/: IMaterials.cppm
G4CoreLib/src/core/Interfaces/Messengers/: IExperimentMessanger.cppm
G4CoreLib/src/core/Interfaces/SourceGenerators/: ISourceGenerator.cppm
G4CoreLib/src/core/Interfaces/detectors/: IDetectorConstruction.cppm
G4CoreLib/src/core/Interfaces/materials/: IMaterials.cppm
G4CoreLib/src/core/Interfaces/messengers/: IExperimentMessanger.cppm
G4CoreLib/src/core/Materials/: BaseMaterial.cppm  ExtendedG4Material.cppm  MaterialsConstants.cppm
G4CoreLib/src/core/Messengers/: BaseExerimentMesssanger.cppm  BaseExperimentMesssanger.cppm
G4CoreLib/src/core/ProcessUtils/: PostProcessManager.cppm  ProcessCollection.cppm
G4CoreLib/src/core/SensitiveDetectors/: BaseSD.cppm
G4CoreLib/src/core/SourceGenerators/: BaseSourceGenerator.cppm  SourceGeneratorManager.cppm  SourceGeneratorWrapper.cppm
G4CoreLib/src/core/commands/: CommandBuilder.cppm  CommandManager.cppm
G4CoreLib/src/core/detectors/: DetectorConstruction.cppm  DetectorManager.cppm
G4CoreLib/src/core/materials/: BaseMaterial.cppm
G4CoreLib/src/core/messengers/: BaseExerimentMesssanger.cppm
G4CoreLib/src/macroses/: init.mac
G4CoreLib/src/macroses/experiments/: experiment_GaN_stack.mac
G4CoreLib/src/models/experiment/: BaseExperimentConfig.cppm
G4CoreLib/src/utils/: Events.cppm
G4CoreLib/src/utils/FileProvider/: FileProvider.cppm  FileProviderConstants.cppm
